--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-498.8KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇫🇷 法国-2.02MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-3.90MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-221.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-6.90MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-2.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-365.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇭🇰 香港-2.76MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-498.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
