--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.90MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 🇫🇷 法国-1.85MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-221.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
-  - {name: 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇺🇸 美国-314.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-166.3KB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
   - {name: 🇰🇷 韩国-550.1KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇬🇧 英国-4.53MB/s(Youtube:不良林), server: 45.150.165.97, port: 20083, type: vmess, uuid: 4a28c121-7b5b-41bc-8a66-12f3fa8ce422, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-2.41MB/s(Youtube:不良林), server: tshdfkcccc.xn--mesv7f5toqlp.club, port: 11113, type: trojan, password: afe99415-8808-46ff-8982-3a25b8c892cc, sni: tshdfkcccc.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-356.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: u5.anmu.one, port: 16494, type: vmess, uuid: b39c6188-43b1-4a8c-ca01-19a0f9ae769a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
       - 🇰🇷 韩国-550.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-4.53MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
