--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇨🇳 中国-8.43MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1011.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-356.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-166.3KB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: u5.anmu.one, port: 16494, type: vmess, uuid: b39c6188-43b1-4a8c-ca01-19a0f9ae769a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇳 中国-8.26MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 未知国家-231.5KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-606.6KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: a64208c6-de3a-11ec-9ec0-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇨🇳 中国-222.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.43MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1011.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-763.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
+      - 未知国家-231.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-606.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
